--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <script src="script.js"></script>
 </head>
-<body onload="drawRadar(4,100, 0, 0)">
+<body onload="drawRadar(4, 4,100, 0, 0)">
 <canvas id="radar", width=1000, height=1000>
 </canvas>
 </body>
