improved drawing with html canvas

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <script src="script.js"></script>
 </head>
-<body onload="drawRadar(4, 4,100, 0, 0)">
-<canvas id="radar", width=1000, height=1000>
+<body onload="drawRadar(4, 4, 100, 0, 0)">
+<canvas id="radar" width=1000 height=1000>
 </canvas>
 </body>
 </html>
