--- a/radar.html
+++ b/radar.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<script src="script.js"></script>
+<script src="radar.js"></script>
 </head>
 <body onload="drawRadar(4, 4, 100, 0, 0)">
 <canvas id="radar" width=1000 height=1000>
