--- a/radar.html
+++ b/radar.html
@@ -11,15 +11,15 @@
 </div> 
 <div style='float:left; padding:25px'> 
 <p><b>Datastores</b></p> 
-<p>1. Amazon Redshift</p><p>2. Druid</p><p>4. Google Bigtable</p><p>5. RocksDB</p><p>6. AWS DynamoDB</p><p>8. HDFS</p><p>10. ZooKeeper</p><p>12. MySQL</p><p>13. Oracle DB</p><p>15. MongoDB</p><p>27. Hazelcast</p><p>28. Hbase</p><p>29. Memcached</p><p>42. Cassandra</p><p>54. AWS S5</p><p>56. Solr</p><p>60. Elasticsearch</p><p>61. etcd</p><p>62. Exasol</p><p>64. PostgreSQL</p><p>65. Redis</p><p>68. Aerospike</p><p>70. CouchBase</p><p>72. Consul</p></div> 
+<p><b>Trial</b></p><p>1. Amazon Redshift</p><p>2. Druid</p><p>8. HDFS</p><p><b>Hold</b></p><p>10. ZooKeeper</p><p>12. MySQL</p><p>13. Oracle DB</p><p>15. MongoDB</p><p>27. Hazelcast</p><p>28. Hbase</p><p>29. Memcached</p><p>56. Solr</p><p>68. Aerospike</p><p>70. CouchBase</p><p>72. Consul</p><p><b>Assess</b></p><p>4. Google Bigtable</p><p>5. RocksDB</p><p><b>Adopt</b></p><p>6. AWS DynamoDB</p><p>42. Cassandra</p><p>54. AWS S5</p><p>60. Elasticsearch</p><p>61. etcd</p><p>62. Exasol</p><p>64. PostgreSQL</p><p>65. Redis</p></div> 
 <div style='float:left; padding:25px'> 
 <p><b>DataManagement</b></p> 
-<p>3. AWS Data Pipeline</p><p>7. ActiveMQ</p><p>9. Hadoop</p><p>11. Presto</p><p>14. AWS Glue</p><p>16. RabbitMQ</p><p>17. AWS Athena</p><p>34. Spark</p><p>35. AWS Kinesis</p><p>40. dbt</p><p>44. Nakadi</p><p>45. YARN</p><p>50. Flink</p><p>51. Google BigQuery</p><p>57. AWS EMR</p><p>58. AWS SNS</p><p>59. AWS SQS</p><p>63. HornetQ</p><p>67. Airflow</p><p>69. Kafka</p><p>71. Databricks</p></div> 
+<p><b>Trial</b></p><p>11. Presto</p><p>16. RabbitMQ</p><p>35. AWS Kinesis</p><p>50. Flink</p><p>51. Google BigQuery</p><p><b>Hold</b></p><p>3. AWS Data Pipeline</p><p>7. ActiveMQ</p><p>9. Hadoop</p><p>45. YARN</p><p>63. HornetQ</p><p><b>Assess</b></p><p>14. AWS Glue</p><p>17. AWS Athena</p><p>40. dbt</p><p><b>Adopt</b></p><p>34. Spark</p><p>44. Nakadi</p><p>57. AWS EMR</p><p>58. AWS SNS</p><p>59. AWS SQS</p><p>67. Airflow</p><p>69. Kafka</p><p>71. Databricks</p></div> 
 <div style='float:left; padding:25px'> 
 <p><b>Languages</b></p> 
-<p>18. Go</p><p>21. JavaScript</p><p>22. Dart</p><p>25. Clojure</p><p>30. R</p><p>32. Haskell</p><p>33. Rust</p><p>37. GraphQL</p><p>38. Java</p><p>41. OpenAPI (Swagger)</p><p>43. Scala</p><p>46. Swift</p><p>47. TypeScript</p><p>55. Python</p><p>66. Kotlin</p></div> 
+<p><b>Trial</b></p><p>22. Dart</p><p><b>Hold</b></p><p>25. Clojure</p><p>32. Haskell</p><p>33. Rust</p><p><b>Assess</b></p><p>30. R</p><p><b>Adopt</b></p><p>18. Go</p><p>21. JavaScript</p><p>37. GraphQL</p><p>38. Java</p><p>41. OpenAPI (Swagger)</p><p>43. Scala</p><p>46. Swift</p><p>47. TypeScript</p><p>55. Python</p><p>66. Kotlin</p></div> 
 <div style='float:left; padding:25px'> 
 <p><b>Infrastructure</b></p> 
-<p>19. AWS Lambda</p><p>20. Amazon SageMaker</p><p>23. AWS CloudFront</p><p>24. Docker</p><p>26. Nginx</p><p>31. Kubernetes</p><p>36. ZMON</p><p>39. AWS CloudFormation</p><p>48. Slurm</p><p>49. STUPS</p><p>52. OpenTracing</p><p>53. Skipper</p></div> 
+<p><b>Trial</b></p><p>19. AWS Lambda</p><p><b>Hold</b></p><p>49. STUPS</p><p><b>Assess</b></p><p>48. Slurm</p><p><b>Adopt</b></p><p>20. Amazon SageMaker</p><p>23. AWS CloudFront</p><p>24. Docker</p><p>26. Nginx</p><p>31. Kubernetes</p><p>36. ZMON</p><p>39. AWS CloudFormation</p><p>52. OpenTracing</p><p>53. Skipper</p></div> 
 </body>
 </html>
